--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.retry:spring-retry:1.3.1'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 springBoot {
